IMPALA-6908: IsConnResetTException() should include ECONNRESET

The utility function IsConnResetTException() attempted to match error
strings from RPCs that fail due to the remote end resetting the connection
for any reason. However, it did not take care of the situation where
ECONNRESET was sent on a cluster not using TLS.

This patch adds this case as well and adds a custom cluster fault
injection test to test the same.

Change-Id: I1bb997a833917e5166c9ca192da219f50f4439e2
Reviewed-on: http://gerrit.cloudera.org:8080/10265
Reviewed-by: Sailesh Mukil <sailesh@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>