tests/custom_cluster/test_rpc_exception.py
@@ -65,42 +65,47 @@ class TestRPCException(CustomClusterTestSuite):
 
   @pytest.mark.execute_serially
   @CustomClusterTestSuite.with_args("--fault_injection_rpc_exception_type=3")
+  def test_rpc_send_stale_connection_reset(self, vector):
+    self.execute_test_query(None)
+
+  @pytest.mark.execute_serially
+  @CustomClusterTestSuite.with_args("--fault_injection_rpc_exception_type=4")
   def test_rpc_send_timed_out(self, vector):
     self.execute_test_query(None)
 
   @SkipIf.not_thrift
   @pytest.mark.execute_serially
-  @CustomClusterTestSuite.with_args("--fault_injection_rpc_exception_type=4")
+  @CustomClusterTestSuite.with_args("--fault_injection_rpc_exception_type=5")
   def test_rpc_recv_closed_connection(self, vector):
     self.execute_test_query("Called read on non-open socket")
 
   @pytest.mark.execute_serially
-  @CustomClusterTestSuite.with_args("--fault_injection_rpc_exception_type=5")
+  @CustomClusterTestSuite.with_args("--fault_injection_rpc_exception_type=6")
   def test_rpc_recv_timed_out(self, vector):
     self.execute_test_query(None)
 
   @pytest.mark.execute_serially
-  @CustomClusterTestSuite.with_args("--fault_injection_rpc_exception_type=6")
+  @CustomClusterTestSuite.with_args("--fault_injection_rpc_exception_type=7")
   def test_rpc_secure_send_closed_connection(self, vector):
     self.execute_test_query(None)
 
   @pytest.mark.execute_serially
-  @CustomClusterTestSuite.with_args("--fault_injection_rpc_exception_type=7")
+  @CustomClusterTestSuite.with_args("--fault_injection_rpc_exception_type=8")
   def test_rpc_secure_send_stale_connection(self, vector):
     self.execute_test_query(None)
 
   @pytest.mark.execute_serially
-  @CustomClusterTestSuite.with_args("--fault_injection_rpc_exception_type=8")
+  @CustomClusterTestSuite.with_args("--fault_injection_rpc_exception_type=9")
   def test_rpc_secure_send_timed_out(self, vector):
     self.execute_test_query(None)
 
   @SkipIf.not_thrift
   @pytest.mark.execute_serially
-  @CustomClusterTestSuite.with_args("--fault_injection_rpc_exception_type=9")
+  @CustomClusterTestSuite.with_args("--fault_injection_rpc_exception_type=10")
   def test_rpc_secure_recv_closed_connection(self, vector):
     self.execute_test_query("TTransportException: Transport not open")
 
   @pytest.mark.execute_serially
-  @CustomClusterTestSuite.with_args("--fault_injection_rpc_exception_type=10")
+  @CustomClusterTestSuite.with_args("--fault_injection_rpc_exception_type=11")
   def test_rpc_secure_recv_timed_out(self, vector):
     self.execute_test_query(None)
